--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: OfroLib
 version: '${version}'
-main: github.rainbowmori.ofrolib.OfroLib
+main: github.teamofro.ofrolib.OfroLib
 api-version: '1.20'
