--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
-apply plugin: 'java'
-apply plugin: 'maven-publish'
-apply plugin: 'java-library'
+plugins {
+    id 'java'
+    id 'maven-publish'
+}
 
 group = 'github.teamofro'
 version = '1.0.0'
@@ -24,12 +25,11 @@ repositories {
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.20.2-R0.1-SNAPSHOT'
 
-    api 'com.github.MilkBowl:VaultAPI:1.7'
-
-    api 'com.onarandombox.multiversecore:multiverse-core:4.3.9'
-    api 'com.onarandombox.multiverseinventories:multiverse-inventories:4.2.5'
-    api 'com.onarandombox.multiverseportals:multiverse-portals:4.2.2'
-    api 'com.onarandombox.multiversenetherportals:Multiverse-NetherPortals:4.2.1'
+	compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
+    compileOnly 'com.onarandombox.multiversecore:multiverse-core:4.3.9'
+    compileOnly 'com.onarandombox.multiverseinventories:multiverse-inventories:4.2.5'
+    compileOnly 'com.onarandombox.multiverseportals:multiverse-portals:4.2.2'
+    compileOnly 'com.onarandombox.multiversenetherportals:Multiverse-NetherPortals:4.2.1'
 }
 
 def targetJavaVersion = 17
